# collection-claude-code-source-code

./: .gitignore  README.MD  README.md  agent.py  clawnest.py  cloudsave.py  config.py  context.py  demo.py  nano_claude.py  providers.py  pyproject.toml  subagent.py  tool_registry.py  tools.py
demos/: make_brainstorm_demo.py  make_demo.py  make_proactive_demo.py  make_ssj_demo.py  make_telegram_demo.py
docs/: architecture.md  comparison_claude_code_vs_nano_v3.03_cn.md  comparison_claude_code_vs_nano_v3.03_en.md  contributor_guide.md  readme.md  update_readme_v3.0.md
docs/PR/: resume_Feature.md
docs/superpowers/plans/: 2026-04-02-open-cc-enhancement.md
docs/superpowers/specs/: 2026-04-02-open-cc-design.md
mcp/: __init__.py  config.py  types.py
memory/: __init__.py  store.py  tools.py
multi_agent/: __init__.py  subagent.py  tools.py
plugin/: __init__.py  recommend.py  store.py  types.py
skill/: builtin.py  loader.py
task/: __init__.py  store.py
tests/: test_task.py  test_voice.py
voice/: __init__.py  keyterms.py
